grammar.js
    start: $ => repeat(
      choice(
        $.program_definition,
        //optional($.function_definition) //todo
      )
    ),

    program_definition: $ => prec.right(seq(
      $.identification_division,
      optional($.environment_division),
      optional($.data_division),
      optional($.procedure_division), //todo
      repeat($.end_program), //todo
      //optional($.LINE_PREFIX_COMMENT),
    )),

    identification_division: $ => seq(
      $._IDENTIFICATION, $._DIVISION, '.',
      optional(
        seq($._PROGRAM_ID, '.',
          $.program_name,
          optional(choice(
            $.as_literal,
            $.is_initial,
            $.is_common)),
          '.')),
      repeat(choice(
        $.author_section,
        $.installation_section,
        $.date_written_section,
        $.date_compiled_section,
        $.security_section)),
    ),

    program_name: $ => choice(
      $._WORD,
      $._LITERAL
    ),

    qualified_word: $ => sepBy(
      $.WORD, $._in_of
    ),

    _in_of: $ => choice(
      $._IN,
      $._OF
    ),

    procedure_division: $ => seq(
      $._PROCEDURE, $._DIVISION,
      optional($.procedure_using_chaining),
      optional($.procedure_returning),
      '.',
      optional($.procedure_declaratives),
      optional($._procedure_division_contenet)
    ),

    _procedure_division_contenet: $ => prec.right(choice(
      seq(
        optional($._procedure_division_headers),
        repeat(seq(
          $._procedure_division_statements_before_header,
          $._procedure_division_headers,
        )),
        repeat1($._procedure_division_statement)
      ),
      seq(
        optional($._procedure_division_headers),
        repeat1(seq(
          $._procedure_division_statements_before_header,
          $._procedure_division_headers,
        )),
        repeat($._procedure_division_statement)
      ),
    )),

    period: $ => '.',

    accept_statement: $ => seq(
      $._ACCEPT,
      $._accept_body,
    ),

    idms_accept_statement: $ => seq(
      $._ACCEPT,
      $._idms_accept_body,
    ),

    _idms_accept_body: $ => seq(
      $._identifier,
      $._FROM,
      optional($.idms_record_name),
      optional(choice($.NEXT, $.PRIOR, $.OWNER)),
      $.CURRENCY,
      optional($.idms_unparsed_tail),
    ),

    _accept_body: $ => prec.right(seq(
      $._identifier,
      choice(
        seq(
          optional($.at_line_column),
          optional($.with_accp_attr),
        ),
        seq(
          $._FROM,
          field('from', choice(
            seq($.ESCAPE, $.KEY),
            $.LINES,
            $.COLUMNS,
            seq($.DATE, optional($.YYYYMMDD)),
            seq($.DAY, optional($.YYYYDDD)),
            $.DAY_OF_WEEK,
            $.TIME,
            $.COMMAND_LINE,
            $.ENVIRONMENT_VALUE,
            $.ENVIRONMENT,
            $.ARGUMENT_NUMBER,
            $.ARGUMENT_VALUE,
            $.MNEMONIC_NAME,
            $.WORD
          ))
        )
      )
    )),

    idms_navigation_statement: $ => seq(
      field('verb', choice($.FIND, $.OBTAIN)),
      $._idms_navigation_body
    ),

    idms_update_statement: $ => choice(
      seq(
        field('verb', choice($.STORE, $.MODIFY)),
        $.idms_record_name
      ),
      seq(
        field('verb', $.ERASE),
        $.idms_record_name,
        // ERASE <record> [ALL|PERMANENT|SELECTIVE] [MEMBERS]. Modelled on
        // measured volume: the D-09 tail census found this shape in 14 of
        // 119 idms_unparsed_tail records (12%), the second and only other
        // concentration after BIND RUN-UNIT DBNAME.
        optional(seq(
          choice($.ALL, $.PERMANENT, $.SELECTIVE),
          optional($.MEMBERS)
        )),
        optional($.idms_unparsed_tail)
      ),
      seq(
        field('verb', $.CONNECT),
        $.idms_record_name,
        $.TO,
        $.idms_set_name
      ),
      seq(
        field('verb', $.DISCONNECT),
        $.idms_record_name,
        $.FROM,
        $.idms_set_name
      ),
      seq(
        field('verb', $.GET),
        optional($.idms_record_name)
      )
    ),

    // Keep known invalid cross-verb forms inside the procedure division so
    // recovery cannot strand a valid-looking partial update node. The alias
    // deliberately exposes them as ERROR rather than a graph-bearing type.
    idms_session_statement: $ => $._idms_session_body,

    _idms_session_body: $ => prec.right(choice(
      seq(
        field('verb', $.BIND),
        optional(choice($.RUN_UNIT, $.idms_record_name)),
        // BIND RUN-UNIT DBNAME <db-name>. Modelled on measured volume: the
        // D-09 tail census found this shape in 96 of 119 idms_unparsed_tail
        // records (81%). The database name is not a graph edge, so it is
        // absorbed as $.WORD rather than given its own node, matching how
        // the DB-KEY navigation format treats its operand.
        optional(seq($.DBNAME, $.WORD)),
        optional($.idms_unparsed_tail)
      ),
      seq(
        field('verb', $.READY),
        optional($.idms_record_name),
        optional(seq(
          $.USAGE_MODE,
          optional($.IS),
          repeat(choice(
            $.PROTECTED,
            $.EXCLUSIVE,
            $.RETRIEVAL,
            $.UPDATE
          ))
        )),
        optional($.idms_unparsed_tail)
      ),
      seq(
        field('verb', $.FINISH),
        optional($.TASK),
        optional($.idms_unparsed_tail)
      ),
      seq(
        field('verb', $.COMMIT),
        optional($.TASK),
        optional($.ALL),
        optional($.idms_unparsed_tail)
      ),
      seq(
        field('verb', $.ROLLBACK),
        optional($.TASK),
        optional($.CONTINUE),
        optional($.idms_unparsed_tail)
      )
    )),

    // Six manual-documented FIND/OBTAIN formats (CA IDMS DML Reference for
    // COBOL), each preceded by the shared optional KEEP [EXCLUSIVE] prefix.
    _idms_navigation_body: $ => seq(
      optional(seq($.KEEP, optional($.EXCLUSIVE))),
      choice(
        // Format: DB-KEY
        seq(
          optional($.idms_record_name),
          $.DB_KEY,
          $.IS,
          $.WORD,
          optional(seq($.PAGE_INFO, $.WORD))
        ),
        // Format: CALC
        seq(
          optional(choice($.CALC, $.ANY)),
          $.idms_record_name
        ),
        // Format: OWNER
        seq(
          $.OWNER,
          $.WITHIN,
          $.idms_set_name
        ),
        // Format: WITHIN set/area
        seq(
          optional(choice($.NEXT, $.PRIOR, $.FIRST, $.LAST, $.integer)),
          optional($.idms_record_name),
          $.WITHIN,
          $.idms_set_name
        ),
        // Format: CURRENT
        seq(
          $.CURRENT,
          optional(choice(
            $.idms_record_name,
            seq($.WITHIN, $.idms_set_name)
          ))
        ),
      ),
      optional($.idms_unparsed_tail)
    ),

    // prec(1, ...): a bare WORD immediately after a modeled verb/clause
    // token is ambiguous between reducing as this named operand or as the
    // first token of idms_unparsed_tail (both are single-token wrappers
    // around $.WORD) — tree-sitter generate reports this as a genuine
    // reduce/reduce conflict. Static precedence prefers the modeled
    // operand, per the plan's resolution order (static prec() before
    // conflicts:/prec.dynamic()); it resolved this cleanly with no
    // generator error, so no `conflicts:` entry was needed.
    idms_record_name: $ => prec(1, $.WORD),

    idms_set_name: $ => prec(1, $.WORD),

    // D-03: an operand tail the four formats above don't model is absorbed
    // into this named node rather than left to ERROR or silently dropped.
    // Pure grammar (no external-scanner token, per RESEARCH.md) — a repeat
    // over the grammar's own atomic leaves, bounded at the literal '.'
    // (never consumed here) the same way neutralize()'s own `[^.]*\.`
    // statement-boundary regex already does across the corpus.
    _idms_operand_token: $ => choice(
      $.WORD,
      $._LITERAL,
      '(',
      ')',
      ','
    ),

    idms_unparsed_tail: $ => repeat1($._idms_operand_token),

    _LITERAL: $ => choice(
      $.number,
      $._string,
    ),

    //todo
    _ACCEPT: $ => /[aA][cC][cC][eE][pP][tT]/,
    _DIVISION: $ => /[dD][iI][vV][iI][sS][iI][oO][nN]/,
    _IDENTIFICATION: $ => /[iI][dD][eE][nN][tT][iI][fF][iI][cC][aA][tT][iI][oO][nN]/,
    _PROCEDURE: $ => /[pP][rR][oO][cC][eE][dD][uU][rR][eE]/,
    _PROGRAM_ID: $ => /[pP][rR][oO][gG][rR][aA][mM]-[iI][dD]/,
    _WORD: $ => /([0-9][a-zA-Z0-9-]*[a-zA-Z][a-zA-Z0-9-]*)|([a-zA-Z][a-zA-Z0-9-]*)/,
