test/corpus/idms_accept.txt
====================================
idms accept standard from date
====================================
       identification division.
       program-id. a.
       procedure division.
       ACCEPT WS-FIELD FROM DATE.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (accept_statement
        (qualified_word
          (WORD))
        from: (DATE))
      (period))))

====================================
idms accept standard bare
====================================
       identification division.
       program-id. a.
       procedure division.
       ACCEPT WS-FIELD.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (accept_statement
        (qualified_word
          (WORD)))
      (period))))

====================================
idms accept standard from word
====================================
       identification division.
       program-id. a.
       procedure division.
       ACCEPT WS-FIELD FROM WS-OTHER.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (accept_statement
        (qualified_word
          (WORD))
        from: (WORD))
      (period))))

====================================
idms accept currency
====================================
       identification division.
       program-id. a.
       procedure division.
       ACCEPT WS-DB-KEY FROM CUSTOMER-REC CURRENCY.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (idms_accept_statement
        verb: (ACCEPT)
        (qualified_word
          (WORD))
        (idms_record_name
          (WORD))
        (CURRENCY))
      (period))))

====================================
idms accept currency without qualifier
====================================
       identification division.
       program-id. a.
       procedure division.
       ACCEPT WS-DB-KEY FROM CURRENCY.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (idms_accept_statement
        verb: (ACCEPT)
        (qualified_word
          (WORD))
        (CURRENCY))
      (period))))

====================================
idms accept relative owner currency
====================================
       identification division.
       program-id. a.
       procedure division.
       ACCEPT WS-DB-KEY FROM CUST-ORDER-SET OWNER CURRENCY.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (idms_accept_statement
        verb: (ACCEPT)
        (qualified_word
          (WORD))
        (idms_record_name
          (WORD))
        (OWNER)
        (CURRENCY))
      (period))))

====================================
idms accept unparsed tail
====================================
       identification division.
       program-id. a.
       procedure division.
       ACCEPT WS-DB-KEY FROM CUSTOMER-REC CURRENCY KEEP.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (idms_accept_statement
        verb: (ACCEPT)
        (qualified_word
          (WORD))
        (idms_record_name
          (WORD))
        (CURRENCY)
        (idms_unparsed_tail
          (WORD)))
      (period))))
