test/corpus/idms_update.txt
====================================
idms update store
====================================
       identification division.
       program-id. a.
       procedure division.
       STORE CUSTOMER-REC.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (idms_update_statement
        verb: (STORE)
        (idms_record_name
          (WORD)))
      (period))))

====================================
idms update invalid bare store
====================================
       identification division.
       program-id. a.
       procedure division.
       STORE.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (ERROR
        (STORE)))))

====================================
idms update invalid bare modify
====================================
       identification division.
       program-id. a.
       procedure division.
       MODIFY.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (ERROR
        (MODIFY)))))

====================================
idms update invalid bare erase
====================================
       identification division.
       program-id. a.
       procedure division.
       ERASE.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (ERROR
        (ERASE)))))

====================================
idms update invalid bare connect
====================================
       identification division.
       program-id. a.
       procedure division.
       CONNECT.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (ERROR
        (CONNECT)))))

====================================
idms update invalid bare disconnect
====================================
       identification division.
       program-id. a.
       procedure division.
       DISCONNECT.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (ERROR
        (DISCONNECT)))))

====================================
idms update invalid connect from
====================================
       identification division.
       program-id. a.
       procedure division.
       CONNECT CUSTOMER-REC FROM CUST-ORDER-SET.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (ERROR
        (CONNECT)
        (WORD)
        (FROM)
        (WORD)))))

====================================
idms update invalid disconnect to
====================================
       identification division.
       program-id. a.
       procedure division.
       DISCONNECT CUSTOMER-REC TO CUST-ORDER-SET.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (ERROR
        (DISCONNECT)
        (WORD)
        (TO)
        (WORD)))))

====================================
idms update invalid store to
====================================
       identification division.
       program-id. a.
       procedure division.
       STORE CUSTOMER-REC TO CUST-ORDER-SET.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (ERROR
        (STORE)
        (WORD)
        (TO)
        (WORD)))))

====================================
idms update invalid store from
====================================
       identification division.
       program-id. a.
       procedure division.
       STORE CUSTOMER-REC FROM CUST-ORDER-SET.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (ERROR
        (STORE)
        (WORD)
        (FROM)
        (WORD)))))

====================================
idms update invalid modify from
====================================
       identification division.
       program-id. a.
       procedure division.
       MODIFY CUSTOMER-REC FROM CUST-ORDER-SET.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (ERROR
        (MODIFY)
        (WORD)
        (FROM)
        (WORD)))))

====================================
idms update invalid modify to
====================================
       identification division.
       program-id. a.
       procedure division.
       MODIFY CUSTOMER-REC TO CUST-ORDER-SET.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (ERROR
        (MODIFY)
        (WORD)
        (TO)
        (WORD)))))

====================================
idms update invalid get to
====================================
       identification division.
       program-id. a.
       procedure division.
       GET CUSTOMER-REC TO CUST-ORDER-SET.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (ERROR
        (GET)
        (WORD)
        (TO)
        (WORD)))))

====================================
idms update invalid get from
====================================
       identification division.
       program-id. a.
       procedure division.
       GET CUSTOMER-REC FROM CUST-ORDER-SET.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (ERROR
        (GET)
        (WORD)
        (FROM)
        (WORD)))))

====================================
idms update invalid cross-verb option
====================================
       identification division.
       program-id. a.
       procedure division.
       STORE CUSTOMER-REC ALL MEMBERS.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (ERROR
        (STORE)
        (WORD)
        (ALL)
        (MEMBERS)))))

====================================
idms update invalid modify member option
====================================
       identification division.
       program-id. a.
       procedure division.
       MODIFY CUSTOMER-REC PERMANENT MEMBERS.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (ERROR
        (MODIFY)
        (WORD)
        (PERMANENT)
        (MEMBERS)))))

====================================
idms update invalid connect member option
====================================
       identification division.
       program-id. a.
       procedure division.
       CONNECT CUSTOMER-REC SELECTIVE MEMBERS.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (ERROR
        (CONNECT)
        (WORD)
        (SELECTIVE)
        (MEMBERS)))))

====================================
idms update invalid disconnect member option
====================================
       identification division.
       program-id. a.
       procedure division.
       DISCONNECT CUSTOMER-REC ALL MEMBERS.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (ERROR
        (DISCONNECT)
        (WORD)
        (ALL)
        (MEMBERS)))))

====================================
idms update invalid get member option
====================================
       identification division.
       program-id. a.
       procedure division.
       GET CUSTOMER-REC PERMANENT MEMBERS.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (ERROR
        (GET)
        (WORD)
        (PERMANENT)
        (MEMBERS)))))

====================================
idms update modify
====================================
       identification division.
       program-id. a.
       procedure division.
       MODIFY CUSTOMER-REC.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (idms_update_statement
        verb: (MODIFY)
        (idms_record_name
          (WORD)))
      (period))))

====================================
idms update erase all members
====================================
       identification division.
       program-id. a.
       procedure division.
       ERASE CUSTOMER-REC ALL MEMBERS.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (idms_update_statement
        verb: (ERASE)
        (idms_record_name
          (WORD))
        (ALL)
        (MEMBERS))
      (period))))

====================================
idms update connect
====================================
       identification division.
       program-id. a.
       procedure division.
       CONNECT CUSTOMER-REC TO CUST-ORDER-SET.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (idms_update_statement
        verb: (CONNECT)
        (idms_record_name
          (WORD))
        (TO)
        (idms_set_name
          (WORD)))
      (period))))

====================================
idms update disconnect
====================================
       identification division.
       program-id. a.
       procedure division.
       DISCONNECT CUSTOMER-REC FROM CUST-ORDER-SET.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (idms_update_statement
        verb: (DISCONNECT)
        (idms_record_name
          (WORD))
        (FROM)
        (idms_set_name
          (WORD)))
      (period))))

====================================
idms update get record
====================================
       identification division.
       program-id. a.
       procedure division.
       GET CUSTOMER-REC.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (idms_update_statement
        verb: (GET)
        (idms_record_name
          (WORD)))
      (period))))

====================================
idms update get bare
====================================
       identification division.
       program-id. a.
       procedure division.
       GET.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (idms_update_statement
        verb: (GET))
      (period))))

====================================
idms update erase permanent members
====================================
       identification division.
       program-id. a.
       procedure division.
       ERASE CUSTOMER-REC PERMANENT MEMBERS.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (idms_update_statement
        verb: (ERASE)
        (idms_record_name
          (WORD))
        (PERMANENT)
        (MEMBERS))
      (period))))

====================================
idms update unparsed tail
====================================
       identification division.
       program-id. a.
       procedure division.
       ERASE CUSTOMER-REC SELECTIVE MEMBERS ODD-TOKEN.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (idms_update_statement
        verb: (ERASE)
        (idms_record_name
          (WORD))
        (SELECTIVE)
        (MEMBERS)
        (idms_unparsed_tail
          (WORD)))
      (period))))
